--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-aml
 name: Deploy to EC2
 
 on:
@@ -7,34 +6,41 @@ on:
       - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Build Docker image
-      run: docker build -t my-html-app .
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Push Docker image
-      run: docker push my-html-app
+      - name: Build and push Docker image
+        run: |
+          docker build -t your-dockerhub-username/your-app:latest .
+          docker push your-dockerhub-username/your-app:latest
 
-    - name: SSH to EC2 and deploy
-      uses: appleboy/ssh-action@v0.1.6
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.EC2_PRIVATE_KEY }}
-        script: |
-          docker pull my-html-app
-          docker stop $(docker ps -q --filter ancestor=my-html-app) || true
-          docker run -d -p 80:80 my-html-app
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
 
-
+    steps:
+      - name: SSH into EC2 and pull the Docker image
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          port: 22
+          script: |
+            docker pull your-dockerhub-username/your-app:latest
+            docker stop your-app || true
+            docker rm your-app || true
+            docker run -d --name your-app -p 80:80 your-dockerhub-username/your-app:latest
