--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
           script: |
-            docker pull your-dockerhub-username/your-app:latest
-            docker stop your-app || true
-            docker rm your-app || true
-            docker run -d --name your-app -p 80:80 your-dockerhub-username/your-app:latest
+            docker pull dhanayanth/html:latest
+            docker stop html || true
+            docker rm html || true
+            docker run -d --name html -p 80:80 dhanayanth/html:latest
